--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,28 @@
 /***************
 stylesheet
 ***************/
+.visibile{
+	margin-top:20px;
+	display:block;
+}
+
+.invisibile{
+	margin-top:20px;
+	display:none;
+}
+
+.divTabella{
+	margin-top:20px;
+}
+
+.tabella{
+	margin-top:10px;
+	min-width:500px;
+}
+
+th{
+	width:50%;
+	color:red;
+	background-color:	#CCCCCC;
+}
+
